--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "country-locator": "^2.1.1",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
