--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "victory": "^36.6.8",
     "weather-icons-react": "^1.2.0"
   },
   "devDependencies": {
