--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "country-locator": "^2.1.1",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
@@ -18,8 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "victory": "^36.6.8",
-    "weather-icons-react": "^1.2.0"
+    "victory": "^36.6.8"
   },
   "devDependencies": {
     "fs": "^0.0.1-security"
