--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
